# egui_sdl2_gl-cube_test

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
libtest/: CMakeLists.txt  test.cpp  test.h
libtest/lib2/: CMakeLists.txt  constant.cpp  constant.h
res/shaders/: fs.glsl  vs.glsl
src/: audio_util.rs  constants.rs  cpp_bindings.rs  cube.rs  gui.rs  gui_util.rs  main.rs  meshes.rs  render_util.rs
