[package]
name = "egui_sdl2_test"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "*"

[dependencies.egui_sdl2_gl]
version = "*"
default-features = true
features = ["sdl2_mixer"]

[build-dependencies]
cmake = "*"
cc = "*"
